--- a/src/layouts/header.astro
+++ b/src/layouts/header.astro
@@ -1,10 +1,10 @@
 ---
+import Navbar from "@components/widgets/navbar.astro";
 import { routes } from "@/constants/routes";
-import Navbar from "@components/widgets/Navbar.astro";
 
 const { title } = Astro.props;
 ---
 
-<header class="transition-all">
+<header>
   <Navbar routes={routes} title={title} />
 </header>
