--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from "@/layouts/Header.astro";
+import Header from "@/layouts/header.astro";
 import "@styles/global.css";
 
 const baseUrl = import.meta.env.BASE_URL;
