--- a/src/components/mosaic/mosaic-maker/tiles/tile.module.css
+++ b/src/components/mosaic/mosaic-maker/tiles/tile.module.css
@@ -12,7 +12,11 @@
 }
 
 .tile > * {
-  transition: background 1s ease-in-out;
+  transition:
+    opacity 1s ease-in-out,
+    background 1s ease-in-out,
+    border-color 1s ease-in-out,
+    transform 1s ease-in-out;
 }
 
 .tile polygon {
