fixe some more paths

--- a/src/pages/misc/piechart/index.astro
+++ b/src/pages/misc/piechart/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@layouts/layout.astro";
+import Layout from "@/layouts/layout.astro";
 import Piechart from "@/components/misc/piechart/piechart.astro";
 ---
 
