--- a/src/pages/mosaic/maker/index.astro
+++ b/src/pages/mosaic/maker/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@layouts/layout.astro";
+import Layout from "@/layouts/layout.astro";
 import { MosaicMaker } from "@/components/mosaic/mosaic-maker/mosaic-maker";
 ---
 
