--- a/src/pages/misc/color-wheel/index.astro
+++ b/src/pages/misc/color-wheel/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@layouts/layout.astro";
+import Layout from "@/layouts/layout.astro";
 import { ColorWheel } from "@/components/misc/color-wheel/color-wheel";
 ---
 
