--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="sitemap" href=`${baseUrl}/sitemap-index.xml` />
     <link rel="icon" type="image/svg+xml" href=`${baseUrl}/favicon.svg` />
     <meta name="generator" content={Astro.generator} />
     <title>{`Playground - ${title ?? "Home"}`}</title>
