--- a/src/layouts/header.astro
+++ b/src/layouts/header.astro
@@ -1,6 +1,6 @@
 ---
-import Navbar from "@/components/widgets/navbar.astro";
-import { routes } from "@/constants/routes";
+import Navbar from "@components/widgets/navbar.astro";
+import { routes } from "@constants/routes";
 
 const { title } = Astro.props;
 ---
