--- a/src/pages/misc/color-wheel/index.astro
+++ b/src/pages/misc/color-wheel/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@/layouts/layout.astro";
-import { ColorWheel } from "@/components/misc/color-wheel/color-wheel";
+import Layout from "@layouts/layout.astro";
+import { ColorWheel } from "@components/misc/color-wheel/color-wheel";
 ---
 
 <Layout title="Color wheel">
