--- a/src/components/widgets/navbar.astro
+++ b/src/components/widgets/navbar.astro
@@ -1,6 +1,6 @@
 ---
-import { cn } from "@/lib/utils";
-import ThemeToggle from "@/components/widgets/themeToggle.astro";
+import { cn } from "@lib/utils";
+import ThemeToggle from "@components/widgets/themeToggle.astro";
 
 interface Props {
   title?: string;
@@ -45,13 +45,7 @@ const { routes } = Astro.props;
     aria-expanded="false"
   >
     <span class="sr-only">Open main menu</span>
-    <svg
-      class="h-5 w-5"
-      aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 17 14"
-    >
+    <svg class="h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
       <path
         stroke="currentColor"
         stroke-linecap="round"
@@ -102,10 +96,7 @@ const { routes } = Astro.props;
     collapser.forEach((toggler) => {
       toggler.addEventListener("click", () => {
         const target = document.getElementById(toggler.getAttribute("data-collapse-toggle"));
-        target.setAttribute(
-          "data-collapse",
-          target.getAttribute("data-collapse") === "true" ? "false" : "true"
-        );
+        target.setAttribute("data-collapse", target.getAttribute("data-collapse") === "true" ? "false" : "true");
       });
     });
   };
