--- a/src/pages/misc/piechart/index.astro
+++ b/src/pages/misc/piechart/index.astro
@@ -1,13 +1,11 @@
 ---
-import Layout from "@/layouts/layout.astro";
-import Piechart from "@/components/misc/piechart/piechart.astro";
+import Layout from "@layouts/layout.astro";
+import Piechart from "@components/misc/piechart/piechart.astro";
 ---
 
 <Layout title="Piechart">
   <p>
-    <a href="https://grafikart.fr/tutoriels/graph-pie-camembert-1965" title="Grafikart tutorial"
-      >Grafikart tutorial</a
-    >
+    <a href="https://grafikart.fr/tutoriels/graph-pie-camembert-1965" title="Grafikart tutorial">Grafikart tutorial</a>
   </p>
   <Piechart />
 </Layout>
