refactor: remove unused props and clean up layout syntax

--- a/src/pages/particles/image-to-particles/index.astro
+++ b/src/pages/particles/image-to-particles/index.astro
@@ -5,5 +5,4 @@ import { StrictModeImageToParticles } from "@components/particles/image-to-parti
 
 <Layout title="Particles">
   <StrictModeImageToParticles client:only="react" />
-</Layout>;
-
+</Layout>
