--- a/src/layouts/header.astro
+++ b/src/layouts/header.astro
@@ -1,7 +1,7 @@
 ---
-import { cn } from "@lib/utils";
-import { routes } from "@constants/routes";
-import ThemeToggle from "@components/widgets/themeToggle.astro";
+import { cn } from "@/lib/utils";
+import { routes } from "@/constants/routes";
+import ThemeToggle from "@/components/widgets/themeToggle.astro";
 
 interface Props {
   title?: string;
