--- a/src/pages/misc/piechart/index.astro
+++ b/src/pages/misc/piechart/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@layouts/layout.astro";
-import Piechart from "@components/misc/piechart/piechart.astro";
+import Piechart from "@/components/misc/piechart/piechart.astro";
+import Layout from "@/layouts/layout.astro";
 ---
 
 <Layout title="Piechart">
