--- a/src/pages/particles/image-to-particles/index.astro
+++ b/src/pages/particles/image-to-particles/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@layouts/layout.astro";
-import { StrictModeImageToParticles } from "@components/particles/image-to-particles/image-to-particles";
+import { StrictModeImageToParticles } from "@/components/particles/image-to-particles/image-to-particles";
+import Layout from "@/layouts/layout.astro";
 ---
 
 <Layout title="Particles">
