--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,6 +1,6 @@
 ---
-import Header from "@layouts/header.astro";
-import "@styles/global.css";
+import Header from "@/layouts/header.astro";
+import "@/styles/global.css";
 
 const baseUrl = import.meta.env.BASE_URL;
 const { title } = Astro.props;
