--- a/src/pages/mosaic/maker/index.astro
+++ b/src/pages/mosaic/maker/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@layouts/layout.astro";
-import { StrictModeMosaicMaker } from "@components/mosaic/mosaic-maker/mosaic-maker";
+import { StrictModeMosaicMaker } from "@/components/mosaic/mosaic-maker/mosaic-maker";
+import Layout from "@/layouts/layout.astro";
 ---
 
 <Layout title="Mosaic maker">
