--- a/src/pages/misc/index.astro
+++ b/src/pages/misc/index.astro
@@ -9,5 +9,6 @@ const baseUrl = import.meta.env.BASE_URL;
   <article class="mx-auto flex max-w-screen-xl gap-8">
     <a href={`${baseUrl}misc/color-wheel/`} class={buttonVariants()}>--&gt; Color wheel</a>
     <a href={`${baseUrl}misc/piechart/`} class={buttonVariants()}>--&gt; Piechart</a>
+    <a href={`${baseUrl}misc/examples/`} class={buttonVariants()}>--&gt; Examples</a>
   </article>
 </Layout>
