--- a/src/pages/misc/index.astro
+++ b/src/pages/misc/index.astro
@@ -6,8 +6,8 @@ const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <Layout title="Misc">
-  <article class="mx-auto flex max-w-screen-xl gap-8">
-    <a href={`${baseUrl}misc/color-wheel/`} class={buttonVariants()}>--&gt; Color wheel</a>
+  <article class="flex gap-8">
+    <a href={`${baseUrl}misc/palettes-generator/`} class={buttonVariants()}>--&gt; Palettes generator</a>
     <a href={`${baseUrl}misc/piechart/`} class={buttonVariants()}>--&gt; Piechart</a>
     <a href={`${baseUrl}misc/examples/`} class={buttonVariants()}>--&gt; Examples</a>
   </article>
