--- a/src/pages/misc/index.astro
+++ b/src/pages/misc/index.astro
@@ -1,5 +1,5 @@
 ---
-import { buttonVariants } from "@/components/ui/button";
+import { buttonVariants } from "@/components/ui/button/button";
 import Layout from "@/layouts/layout.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
@@ -7,7 +7,9 @@ const baseUrl = import.meta.env.BASE_URL;
 
 <Layout title="Misc">
   <article class="flex gap-8">
-    <a href={`${baseUrl}misc/palettes-generator/`} class={buttonVariants()}>--&gt; Palettes generator</a>
+    <a href={`${baseUrl}misc/palettes-generator/`} class={buttonVariants()}
+      >--&gt; Palettes generator</a
+    >
     <a href={`${baseUrl}misc/piechart/`} class={buttonVariants()}>--&gt; Piechart</a>
     <a href={`${baseUrl}misc/examples/`} class={buttonVariants()}>--&gt; Examples</a>
   </article>
