--- a/src/pages/particles/index.astro
+++ b/src/pages/particles/index.astro
@@ -1,5 +1,5 @@
 ---
-import { buttonVariants } from "@/components/ui/button";
+import { buttonVariants } from "@/components/ui/button/button";
 import Layout from "@/layouts/layout.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
@@ -7,6 +7,8 @@ const baseUrl = import.meta.env.BASE_URL;
 
 <Layout title="Particles">
   <article>
-    <a href={`${baseUrl}particles/image-to-particles/`} class={buttonVariants()}>--&gt; Image to particles page</a>
+    <a href={`${baseUrl}particles/image-to-particles/`} class={buttonVariants()}
+      >--&gt; Image to particles page</a
+    >
   </article>
 </Layout>
