fixing npm script

--- a/src/pages/misc/piechart/index.astro
+++ b/src/pages/misc/piechart/index.astro
@@ -5,7 +5,9 @@ import Layout from "@/layouts/layout.astro";
 
 <Layout title="Piechart">
   <p>
-    <a href="https://grafikart.fr/tutoriels/graph-pie-camembert-1965" title="Grafikart tutorial">Grafikart tutorial</a>
+    <a href="https://grafikart.fr/tutoriels/graph-pie-camembert-1965" title="Grafikart tutorial"
+      >Grafikart tutorial</a
+    >
   </p>
   <Piechart />
 </Layout>
