--- a/src/components/ui/slider/slider.module.css
+++ b/src/components/ui/slider/slider.module.css
@@ -2,8 +2,10 @@
 .slider::-moz-range-thumb {
   --tw-ring-color: hsl(var(--primary));
   --tw-ring-offset-width: 2px;
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
+    var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width))
+    var(--tw-ring-color);
 
   height: 1rem;
   width: 1rem;
