--- a/src/layouts/header.astro
+++ b/src/layouts/header.astro
@@ -34,8 +34,17 @@ const { title } = Astro.props;
     id="navbar"
     class="fixed -right-full top-0 z-20 flex h-dvh w-[max(50%,20ch)] flex-col gap-4 self-end bg-background px-4 py-1 transition-[right] md:static md:h-auto md:w-auto md:flex-row md:p-0"
   >
-    <button id="close-sidebar-button" aria-label="close sidebar" class="flex cursor-pointer justify-end md:hidden">
-      <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="currentColor"
+    <button
+      id="close-sidebar-button"
+      aria-label="close sidebar"
+      class="flex cursor-pointer justify-end md:hidden"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        height="40px"
+        viewBox="0 -960 960 960"
+        width="40px"
+        fill="currentColor"
         ><path
           d="m480-444.62-209.69 209.7q-7.23 7.23-17.5 7.42-10.27.19-17.89-7.42-7.61-7.62-7.61-17.7 0-10.07 7.61-17.69L444.62-480l-209.7-209.69q-7.23-7.23-7.42-17.5-.19-10.27 7.42-17.89 7.62-7.61 17.7-7.61 10.07 0 17.69 7.61L480-515.38l209.69-209.7q7.23-7.23 17.5-7.42 10.27-.19 17.89 7.42 7.61 7.62 7.61 17.7 0 10.07-7.61 17.69L515.38-480l209.7 209.69q7.23 7.23 7.42 17.5.19 10.27-7.42 17.89-7.62 7.61-17.7 7.61-10.07 0-17.69-7.61L480-444.62Z"
         ></path></svg
@@ -72,14 +81,25 @@ const { title } = Astro.props;
     aria-controls="navbar"
     class="mr-4 cursor-pointer md:hidden"
   >
-    <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="currentColor">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="40px"
+      viewBox="0 -960 960 960"
+      width="40px"
+      fill="currentColor"
+    >
       <path
         d="M165.13-254.62q-10.68 0-17.9-7.26-7.23-7.26-7.23-18t7.23-17.86q7.22-7.13 17.9-7.13h629.74q10.68 0 17.9 7.26 7.23 7.26 7.23 18t-7.23 17.87q-7.22 7.12-17.9 7.12H165.13Zm0-200.25q-10.68 0-17.9-7.27-7.23-7.26-7.23-17.99 0-10.74 7.23-17.87 7.22-7.13 17.9-7.13h629.74q10.68 0 17.9 7.27 7.23 7.26 7.23 17.99 0 10.74-7.23 17.87-7.22 7.13-17.9 7.13H165.13Zm0-200.26q-10.68 0-17.9-7.26-7.23-7.26-7.23-18t7.23-17.87q7.22-7.12 17.9-7.12h629.74q10.68 0 17.9 7.26 7.23 7.26 7.23 18t-7.23 17.86q-7.22 7.13-17.9 7.13H165.13Z"
       ></path>
     </svg>
   </button>
 
-  <div id="overlay" aria-hidden="true" class="fixed inset-0 z-10 hidden bg-black/50 transition-opacity"></div>
+  <div
+    id="overlay"
+    aria-hidden="true"
+    class="fixed inset-0 z-10 hidden bg-black/50 transition-opacity"
+  >
+  </div>
 </header>
 
 <script is:inline>
