--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -1,5 +1,4 @@
 ---
-import { buttonVariants } from "@/components/ui/button/button";
 import Layout from "@/layouts/layout.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
@@ -7,6 +6,6 @@ const baseUrl = import.meta.env.BASE_URL;
 
 <Layout title="Mosaic">
   <article>
-    <a href={`${baseUrl}mosaic/maker/`} class={buttonVariants()}>--&gt; Mosaic maker page</a>
+    <a href={`${baseUrl}mosaic/maker/`}>--&gt; Mosaic maker page</a>
   </article>
 </Layout>
