--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "@/layouts/header.astro";
+import "@jpotin/playground-ui/dist/playground-ui.css";
 import "@/styles/global.css";
 
 const baseUrl = import.meta.env.BASE_URL;
@@ -8,22 +9,22 @@ const { title } = Astro.props;
 
 <script is:inline>
   const getThemePreference = () => {
-    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-      return localStorage.getItem("theme");
+    if (typeof localStorage !== "undefined" && localStorage.getItem("mode")) {
+      return localStorage.getItem("mode");
     }
     return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
   };
   const isDark = getThemePreference() === "dark";
-  document.documentElement.classList[isDark ? "add" : "remove"]("dark");
+  document.documentElement.dataset.mode = isDark ? "dark" : "light";
 
   if (typeof localStorage !== "undefined") {
     const observer = new MutationObserver(() => {
-      const isDark = document.documentElement.classList.contains("dark");
-      localStorage.setItem("theme", isDark ? "dark" : "light");
+      const isDark = document.documentElement.dataset.mode === "dark";
+      localStorage.setItem("mode", isDark ? "dark" : "light");
     });
     observer.observe(document.documentElement, {
       attributes: true,
-      attributeFilter: ["class"],
+      attributeFilter: ["data-mode"],
     });
   }
 </script>
@@ -37,7 +38,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{`Playground - ${title ?? "Home"}`}</title>
   </head>
-  <body class="grid min-h-dvh grid-cols-1 grid-rows-[auto,1fr]">
+  <body class="grid min-h-dvh grid-cols-1 grid-rows-[auto_1fr]">
     <Header title={title} />
     <main>
       <slot />
